frontend/src/assets/styles/App.css
html {
  height: 100vh;
  width: 100vw;
  background-color: rgba(221, 160, 221, 0.2);
}

body {
  background-color: rgba(221, 160, 221, 0.2);
}

#logo {
  position: fixed;
  top: 10px;
  left: 10px;
  width: 75px;
  height: 75px;
  cursor: pointer;
  border-radius: 50%;
  background-color: rebeccapurple;
}

#tabs {
  display: flex;
  justify-content: center;
  margin: 20px;
}

button {
  margin: 0 10px;
  padding: 10px 20px;
  font-size: 16px;
  background-color:darkmagenta;
  color: white;
  border: none;
  cursor: pointer;
}

button:hover {
  background-color: darkorchid;
}

#default {
  display: flex;
  flex-direction: column;
  text-align: center;
  margin: auto;
  margin-top: 10vh;
  width: 50%;
  padding: 25px;
  border-radius: 10px;
  background-color: rgba(221, 160, 221, 0.3);
  animation: bob 3s infinite ease-in-out;
}

@keyframes bob {
  0% {
    transform: translateY(-15px);
  }
  50% {
    transform: translateY(15px);
  }
  100% {
    transform: translateY(-15px);
  }
}

h1 {
  color: darkviolet;
  font-size: 45px;
  margin-bottom: 0;
  font-family: 'Lucida Sans', Verdana, sans-serif;
}

h2 {
  color: indigo;
  font-size: 30px;
  font-family:  'Gill Sans', 'Trebuchet MS', sans-serif;
}

h3 {
  font-family: Cambria, Cochin, 'Times New Roman', serif;
}

p {
  font-family: 'Segoe UI', Verdana, sans-serif;
}

#default p {
  font-size: 18px;
  padding: 0 100px;
  line-height: 28px;
}

p strong {
  color: slateblue;
  font-size: 25px;
}

